--- a/.github/workflows/site-publish.yml
+++ b/.github/workflows/site-publish.yml
@@ -27,17 +27,13 @@ jobs:
     name: Linux
     runs-on: ubuntu-latest
     steps:
-      - name: 'Checkout'
-        uses: actions/checkout@v2
-      - uses: actions/cache@v1
+      - uses: actions/checkout@v3
+      - name: 'Set up JDK 11'
+        uses: actions/setup-java@v3
         with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-ubuntu-latest-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-maven-ubuntu-latest
-      - name: 'Setup Java Version'
-        uses: actions/setup-java@v1
-        with:
+          distribution: "temurin"
           java-version: 11
+          cache: 'maven'
       - name: 'Build'
         run: mvn -V --no-transfer-progress clean verify site:site site:stage
       - name: 'Deploy to gh-pages'
