--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,11 +44,11 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
-      - name: 'Set up JDK 11'
+      - name: 'Set up JDK 21'
         uses: actions/setup-java@v3
         with:
-          distribution: "temurin"
-          java-version: 11
+          distribution: "oracle"
+          java-version: 21.ea.28
           cache: 'maven'
       - name: 'Build'
         shell: bash
