--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,15 +29,16 @@ jobs:
   linux:
     name: Linux
     runs-on: ubuntu-latest
-    container: "maven:3.8.6-openjdk-11-slim"
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/cache@v3
+      - name: 'Set up JDK 21'
+        uses: actions/setup-java@v3
         with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-ubuntu-latest-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-maven-ubuntu-latest
+          distribution: "oracle"
+          java-version: 21.ea.28
+          cache: 'maven'
       - name: 'Build'
+        shell: bash
         run: mvn -V --no-transfer-progress clean verify --fail-at-end
   windows:
     name: 'Windows'
