--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           distribution: "oracle"
-          java-version: 21.0.0-ea.28
+          java-version: 21-ea
           cache: 'maven'
       - name: 'Build'
         shell: bash
@@ -49,7 +49,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           distribution: "oracle"
-          java-version: 21.0.0-ea.28
+          java-version: 21-ea
           cache: 'maven'
       - name: 'Build'
         shell: bash
