--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
       - name: 'Set up JDK 21'
         uses: actions/setup-java@v3
         with:
-          distribution: "oracle"
+          distribution: "open"
           java-version: 21-ea
           cache: 'maven'
       - name: 'Build'
@@ -48,7 +48,7 @@ jobs:
       - name: 'Set up JDK 21'
         uses: actions/setup-java@v3
         with:
-          distribution: "oracle"
+          distribution: "open"
           java-version: 21-ea
           cache: 'maven'
       - name: 'Build'
