--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,7 @@ jobs:
           distribution: "oracle"
           java-version: 21-ea
           cache: 'maven'
+          check-latest: true
       - name: 'Build'
         shell: bash
         run: mvn -V --no-transfer-progress clean verify --fail-at-end
@@ -51,6 +52,7 @@ jobs:
           distribution: "oracle"
           java-version: 21-ea
           cache: 'maven'
+          check-latest: true
       - name: 'Build'
         shell: bash
         run: mvn -V --no-transfer-progress clean verify --fail-at-end
