--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           distribution: "oracle"
-          java-version: 21-ea
+          java-version: openjdk-21-ea
           cache: 'maven'
           check-latest: true
       - name: 'Build'
@@ -50,7 +50,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           distribution: "oracle"
-          java-version: 21-ea
+          java-version: openjdk-21-ea
           cache: 'maven'
           check-latest: true
       - name: 'Build'
