--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,8 +34,8 @@ jobs:
       - name: 'Set up JDK 21'
         uses: actions/setup-java@v3
         with:
-          distribution: "oracle"
-          java-version: openjdk-21-ea
+          distribution: "azul"
+          java-version: 21-ea+26
           cache: 'maven'
           check-latest: true
       - name: 'Build'
@@ -49,8 +49,8 @@ jobs:
       - name: 'Set up JDK 21'
         uses: actions/setup-java@v3
         with:
-          distribution: "oracle"
-          java-version: openjdk-21-ea
+          distribution: "azul"
+          java-version: 21-ea+26
           cache: 'maven'
           check-latest: true
       - name: 'Build'
