--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
       - name: 'Set up JDK 21'
         uses: actions/setup-java@v3
         with:
-          distribution: "azul"
+          distribution: "zulu"
           java-version: 21-ea+26
           cache: 'maven'
           check-latest: true
@@ -49,7 +49,7 @@ jobs:
       - name: 'Set up JDK 21'
         uses: actions/setup-java@v3
         with:
-          distribution: "azul"
+          distribution: "zulu"
           java-version: 21-ea+26
           cache: 'maven'
           check-latest: true
