--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,9 +33,13 @@ jobs:
       - uses: actions/checkout@v3
       - name: 'Set up JDK 21'
         uses: actions/setup-java@v3
+      - run: |
+          download_url="https://download.java.net/java/early_access/jdk21/28/GPL/openjdk-21-ea+28_linux-x64_bin.tar.gz"
+          wget -O $RUNNER_TEMP/java_package.tar.gz $download_url
         with:
-          distribution: "zulu"
-          java-version: 21.0.0-ea+26
+          distribution: 'jdkfile'
+          jdkFile: ${{ runner.temp }}/java_package.tar.gz
+          java-version: 21-ea+28
           cache: 'maven'
           check-latest: true
       - name: 'Build'
