--- a/.github/workflows/site-publish.yml
+++ b/.github/workflows/site-publish.yml
@@ -37,9 +37,8 @@ jobs:
       - name: 'Build'
         run: mvn -V --no-transfer-progress clean verify site:site site:stage
       - name: 'Deploy to gh-pages'
-        uses: JamesIves/github-pages-deploy-action@releases/v3
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: target/staging
-          TARGET_FOLDER: snapshot
+          branch: gh-pages
+          folder: target/staging
+          target-folder: snapshot
