--- a/pom.xml
+++ b/pom.xml
@@ -451,9 +451,24 @@
           <version>2.2.4</version>
           <dependencies>
             <dependency>
+              <groupId>org.jruby</groupId>
+              <artifactId>jruby</artifactId>
+              <version>9.4.5.0</version>
+            </dependency>
+            <dependency>
               <groupId>org.asciidoctor</groupId>
               <artifactId>asciidoctorj-pdf</artifactId>
-              <version>2.3.9</version>
+              <version>2.3.10</version>
+            </dependency>
+            <dependency>
+              <groupId>org.asciidoctor</groupId>
+              <artifactId>asciidoctorj</artifactId>
+              <version>2.5.10</version>
+            </dependency>
+            <dependency>
+              <groupId>org.asciidoctor</groupId>
+              <artifactId>asciidoctorj-diagram</artifactId>
+              <version>2.2.13</version>
             </dependency>
           </dependencies>
         </plugin>
