--- a/pom.xml
+++ b/pom.xml
@@ -448,17 +448,17 @@
         <plugin>
           <groupId>org.asciidoctor</groupId>
           <artifactId>asciidoctor-maven-plugin</artifactId>
-          <version>2.2.6</version>
+          <version>3.0.0</version>
           <dependencies>
             <dependency>
               <groupId>org.asciidoctor</groupId>
               <artifactId>asciidoctorj-pdf</artifactId>
-              <version>2.3.12</version>
+              <version>2.3.15</version>
             </dependency>
             <dependency>
               <groupId>org.asciidoctor</groupId>
               <artifactId>asciidoctorj</artifactId>
-              <version>2.5.11</version>
+              <version>3.0.0-alpha.2</version>
             </dependency>
             <dependency>
               <groupId>org.asciidoctor</groupId>
