--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,7 +3,7 @@ updates:
   - package-ecosystem: "maven"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
     labels:
       - "dependency-upgrade"
       - "dependabot"
@@ -11,3 +11,7 @@ updates:
     ignore:
       - dependency-name: "org.apache.maven:maven-plugin-api"
       - dependency-name: "org.apache.maven:maven-core"
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "weekly"
