--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,40 +29,8 @@ jobs:
   linux:
     name: Linux
     runs-on: ubuntu-latest
-    container: "maven:3.8.6-openjdk-11-slim"
+    container: "maven:3.9.8-eclipse-temurin-22-alpine"
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/cache@v4
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-ubuntu-latest-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-maven-ubuntu-latest
-      - name: 'Build'
-        run: mvn -V --no-transfer-progress clean verify --fail-at-end
-  windows:
-    name: 'Windows'
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: 'Set up JDK 21'
-        uses: actions/setup-java@v4
-        with:
-          distribution: "temurin"
-          java-version: 21
-          cache: 'maven'
-      - name: 'Build'
-        shell: bash
-        run: mvn -V --no-transfer-progress clean verify --fail-at-end
-  mac:
-    name: 'Mac OS'
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: 'Set up JDK 21'
-        uses: actions/setup-java@v4
-        with:
-          distribution: "temurin"
-          java-version: 21
-          cache: 'maven'
       - name: 'Build'
         run: mvn -V --no-transfer-progress clean verify --fail-at-end
