Fixed #443 - Fixing issue with site generation required lifting Maven version

--- a/.github/workflows/site-publish.yml
+++ b/.github/workflows/site-publish.yml
@@ -26,6 +26,7 @@ jobs:
   update-site:
     name: Linux
     runs-on: ubuntu-latest
+    container: "maven:3.9.8-eclipse-temurin-22-alpine"
     steps:
       - uses: actions/checkout@v4
       - name: 'Setup JDK 22'
