--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -1,9 +1,9 @@
 name: Release Drafter
 
 on:
-  push:
-    branches:
-      - master
+  milestone:
+    types:
+      - closed
 
 permissions:
   contents: read
