--- a/pom.xml
+++ b/pom.xml
@@ -251,6 +251,11 @@
           <artifactId>maven-source-plugin</artifactId>
           <version>3.3.1</version>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-artifact-plugin</artifactId>
+          <version>3.6.0</version>
+        </plugin>
 
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
