--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
   <licenses>
     <license>
-      <name>Apache License 2.0</name>
+      <name>Apache-2.0</name>
       <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
       <distribution>repo</distribution>
     </license>
