--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,12 +25,26 @@ on:
     branches:
       - '*'
 
+
 jobs:
   linux:
     name: Linux
     runs-on: ubuntu-latest
-    container: "maven:3.9.8-eclipse-temurin-22-alpine"
     steps:
       - uses: actions/checkout@v4
+      - name: 'Set up JDK 24'
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: 24
+          cache: 'maven'
+          check-latest: true
+      - name: Set up Maven
+        uses: stCarolas/setup-maven@v5
+        with:
+          maven-version: 3.9.10
       - name: 'Build'
-        run: mvn -V --no-transfer-progress clean verify --fail-at-end
+        shell: bash
+        env:
+          MAVEN_OPTS: --sun-misc-unsafe-memory-access=allow
+        run: mvn -V --no-transfer-progress --color always verify --fail-at-end
