--- a/.github/workflows/site-publish.yml
+++ b/.github/workflows/site-publish.yml
@@ -23,13 +23,27 @@ on:
       - master
 
 jobs:
-  update-site:
+  linux:
     name: Linux
     runs-on: ubuntu-latest
-    container: "maven:3.9.8-eclipse-temurin-22-alpine"
     steps:
       - uses: actions/checkout@v4
-        run: mvn -V --no-transfer-progress clean verify site:site site:stage
+      - name: 'Set up JDK 24'
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: 24
+          cache: 'maven'
+          check-latest: true
+      - name: Set up Maven
+        uses: stCarolas/setup-maven@v5
+        with:
+          maven-version: 3.9.10
+      - name: 'Build'
+        shell: bash
+        env:
+          MAVEN_OPTS: --sun-misc-unsafe-memory-access=allow
+        run: mvn -V --no-transfer-progress --color clean verify site:site site:stage
       - name: 'Deploy to gh-pages'
         uses: JamesIves/github-pages-deploy-action@v4
         with:
