--- a/pom.xml
+++ b/pom.xml
@@ -519,6 +519,9 @@
         <extensions>true</extensions>
         <configuration>
           <publishingServerId>central-publishing</publishingServerId>
+          <autoPublish>true</autoPublish>
+          <waitUntil>published</waitUntil>
+          <checksums>all</checksums>
         </configuration>
       </plugin>
       <plugin>
